--- a/Client/Pages/Account/Register.razor
+++ b/Client/Pages/Account/Register.razor
@@ -1,27 +1,43 @@
 ﻿@page "/register"
-@inject IUriHelper UriHelper
-@inject HttpClient Http
+<h3>Register</h3>
 @inject IAuthService AuthService
-<h1>Register</h1>
+@inject IUriHelper UriHelper
 
-@if (ShowErrors)
-{
-    <div class="alert alert-danger" role="alert">
-        @foreach (var Error in Errors)
-        {
-            <p>@Error</p>
-        }
+<div class="row">
+    <div class="col-md-6">
+        <section>
+            <form>
+                <hr class="text-danger" />
+                @if (ShowErrors)
+                {
+                    <div class="alert alert-danger" role="alert">
+                        @foreach (var Error in Errors)
+                        {
+                            <p>@Error</p>
+                        }
+                    </div>
+                }
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="email" @bind="Email"class="form-control" placeholder="Email... eg: John@gmail.com"/>
+                </div>
+                <div class="form-group">
+                    <label>Password</label>
+                    <input type="password" @bind="@Password" class="form-control" placeholder="Password..."/>
+                </div>
+                <div class="form-group">
+                    <label>ConfirmPassword</label>
+                    <input type="password" @bind="ConfirmPassword" class="form-control" placeholder="ConfirmPassword..." />
+                </div>
+                <div class="form-group">
+                    <input type="submit" @onclick="Submit" class="form-control btn btn-success" />
+                </div>
+            </form>
+        </section>
     </div>
-}
-
-<TextField @bind-Value="Email" />
-<PasswordField @bind-Value="Password" />
-<PasswordField @bind-Value="ConfirmPassword" />
-
-<input type="submit" class="btn btn-success" @onclick="@Submit" />
+</div>
 
 @code {
-
     public string Email { get; set; }
     public string Password { get; set; }
     public string ConfirmPassword { get; set; }
