--- a/OnlineExamer/Views/Exams/AllExams.cshtml
+++ b/OnlineExamer/Views/Exams/AllExams.cshtml
@@ -9,7 +9,7 @@
     <div class="row">
             @foreach (var exam in this.Model)
             {
-                <button class="container col-md-4 card card-button">
+                <button class="container col-md-5 mr-1 mb-4 card card-button">
                     @exam.ExamType
                 </button>
             }
