--- a/OnlineExamer/Views/SchoolSubjects/SubjectsAll.cshtml
+++ b/OnlineExamer/Views/SchoolSubjects/SubjectsAll.cshtml
@@ -6,6 +6,10 @@
 }
 
 <h1 class="text-center">Училищни предмети</h1>
+
+<p>
+    <h3 class="text-center login-text-message">За да решавате матури трябва да си създадете акаунт!</h3>
+</p>
 <table class="table table-hover">
     <thead class="subject-table">
         <tr>
